
<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_bridge</name>
  <version>0.0.1</version>
  <description>PX4 Offboard bridge for ROS2 (Twist -> PX4 XRCE-DDS)</description>

  <maintainer email="your@email.com">spitze</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>

  <!-- Launch -->
  <exec_depend>ros2launch</exec_depend>

  <!-- Testing (optional but good practice) -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
